modified html and css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>terminal git practice</title>
-</head>
-<body>
-    <h1> practice</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>terminal git practice</title>
+    </head>
+    <body>
+        <h1>practice</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+            nobis repellendus autem quae voluptates eveniet, ex dignissimos enim
+            sunt maiores laudantium magni, distinctio necessitatibus atque.
+        </p>
+        <p>
+            A, modi harum quo rem sed nulla. Vero iusto tenetur perspiciatis
+            eius dicta ut quos, deleniti saepe quae nobis voluptas! Ea nisi
+            recusandae sed commodi?
+        </p>
+        <p>
+            Quibusdam praesentium fugit repellendus esse et voluptates
+            voluptatibus, ullam nam dolorem distinctio molestias autem
+            temporibus fugiat ut quas id ducimus! Ut a reiciendis ullam fugit!
+        </p>
+    </body>
 </html>
